src/snapshot_middleware/snapshots/librojo__snapshot_middleware__dir__test__empty_folder.snap
---
source: src/snapshot_middleware/dir.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo
  relevant_paths:
    - /foo
    - /foo/init.lua
    - /foo/init.luau
    - /foo/init.server.lua
    - /foo/init.server.luau
    - /foo/init.client.lua
    - /foo/init.client.luau
    - /foo/init.plugin.lua
    - /foo/init.plugin.luau
    - /foo/init.csv
    - /foo/init.meta.json
    - /foo/init.meta.jsonc
  context:
    emit_legacy_scripts: true
  specified_id: ~
  middleware: ~
  schema: ~
name: foo
class_name: Folder
properties: {}
children: []
